<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:columnCount="1" >

        <TextView
            android:id="@+id/textView1"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_margin="2dp"
            android:layout_row="2"
            android:text="@string/sensors"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_margin="2dp"
            android:layout_row="26"
            android:text="@string/loc"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_margin="2dp"
            android:layout_row="24"
            android:text="@string/expiry"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_margin="2dp"
            android:layout_row="21"
            android:text="@string/to"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_margin="2dp"
            android:layout_row="18"
            android:text="@string/from"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="18"
            android:ems="10"
            android:inputType="date" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="18"
            android:ems="10"
            android:inputType="time" >
        </EditText>

        <EditText
            android:id="@+id/EditText01"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="21"
            android:ems="10"
            android:inputType="date" />

        <EditText
            android:id="@+id/EditText02"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="21"
            android:ems="10"
            android:inputType="time" />

        <EditText
            android:id="@+id/EditText03"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="24"
            android:ems="10"
            android:inputType="date" />

        <EditText
            android:id="@+id/EditText04"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="24"
            android:ems="10"
            android:inputType="time" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="26"
            android:ems="10"
            android:gravity="center"
            android:hint="Latitude"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/EditText05"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="26"
            android:ems="10"
            android:gravity="center"
            android:hint="Longitude"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="169dp"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="28"
            android:ems="10"
            android:gravity="center"
            android:hint="Location Name" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="100dp"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="28"
            android:text="OR" />

        <TextView
            android:id="@+id/TextView06"
            android:layout_gravity="left"
            android:layout_margin="2dp"
            android:text="@string/rad"
            android:gravity="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView05"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_margin="2dp"
            android:layout_row="32"
            android:text="Doing Activity"
            android:textStyle="bold" />

     <android.support.v7.widget.Space android:id="@+id/space7" /> 

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="105dp"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="35"
            android:entries="@array/activity_options" />

        <TextView
            android:id="@+id/TextView07"
            android:layout_width="97dp"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_margin="2dp"
            android:layout_row="32"
            android:text="Sensor Delay"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView09"
            android:layout_width="104dp"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_margin="2dp"
            android:layout_row="32"
            android:text="GPS min delay"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="122dp"
            android:layout_column="0"
            android:layout_gravity="right|center_vertical"
            android:layout_row="35"
            android:ems="10"
            android:gravity="center"
            android:hint="in seconds"
            android:inputType="number" />

        <Spinner
            android:id="@+id/Spinner01"
            android:layout_width="105dp"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="35"
            android:entries="@array/frequency_options" />

        <android.support.v7.widget.Space
            android:id="@+id/space8"
            android:layout_height="20dp"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="49" />

        <Button
            android:id="@+id/button1"
            android:layout_width="198dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="52"
            android:background="#D3D3D3"
            android:text="@string/publish" 
            android:onClick="sendQuery"/>

        <TextView
            android:id="@+id/TextView08"
            android:layout_column="0"
            android:layout_gravity="left|center_vertical"
            android:layout_margin="2dp"
            android:layout_row="38"
            android:text="@string/count"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="9"
            android:text="@string/acc"
            android:textSize="13sp" />

        <CheckBox
            android:id="@+id/CheckBox02"
            android:layout_gravity="left"
            android:text="@string/rot"
            android:textSize="13sp" />

        <CheckBox
            android:id="@+id/CheckBox01"
            android:layout_width="114dp"
            android:layout_column="0"
            android:layout_gravity="right|top"
            android:layout_row="9"
            android:text="@string/gyro"
            android:textSize="13sp" />

        <CheckBox
            android:id="@+id/CheckBox03"
            android:layout_width="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="9"
            android:text="@string/gps"
            android:textSize="13sp" />

        <View
            android:id="@+id/View02"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="25"
            android:background="#80000000" />

        <View
            android:id="@+id/View03"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="11"
            android:background="#80000000" />

        <View
            android:id="@+id/view1"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="37"
            android:background="#80000000" />

        <View
            android:id="@+id/View01"
            android:layout_height="1dp"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="31"
            android:background="#80000000" />

        <Spinner
            android:id="@+id/Spinner02"
            android:layout_width="105dp"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="39"
            android:entries="@array/device_count" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="105dp"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="39"
            android:ems="10"
            android:gravity="center"
            android:hint="Min"
            android:inputType="number" />

        <EditText
            android:id="@+id/EditText06"
            android:layout_width="105dp"
            android:layout_column="0"
            android:layout_gravity="right|center_vertical"
            android:layout_row="39"
            android:ems="10"
            android:gravity="center"
            android:hint="Max"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <View
            android:id="@+id/View04"
            android:layout_height="1dp"
            android:layout_gravity="left"
            android:background="#80000000" />

        <EditText
            android:id="@+id/EditText07"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center_horizontal|top"
            android:layout_row="29"
            android:ems="10"
             android:gravity="center"
            android:hint="in metres"
            android:inputType="numberDecimal" />

    </GridLayout>

</ScrollView>